UCSFD8-768 fixed the issue of icon flicker in mobile

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -825,6 +825,24 @@ a.icon-transit:hover {
   background: url(/themes/custom/ucsf/assets/images/card/transit.svg) left center no-repeat transparent;
   background-size: 32px 32px; }
 
+.field-ankle-cta a.icon-media {
+  background-image: url(/themes/custom/ucsf/assets/images/card/media.svg);
+  background-position: .5em center;
+  background-repeat: no-repeat;
+  background-size: 32px 32px;
+  padding-left: 48px; }
+  @media (min-width: 850px) {
+    .field-ankle-cta a.icon-media {
+      background-position: left center;
+      padding-left: 40px; } }
+
+.field-ankle-cta a.icon-media:hover {
+  background-image: url(/themes/custom/ucsf/assets/images/card/media-reverse.svg); }
+  @media (min-width: 850px) {
+    .field-ankle-cta a.icon-media:hover {
+      background-image: url(/themes/custom/ucsf/assets/images/card/media.svg);
+      padding-left: 48px; } }
+
 [data-primary-area="pa-about"] figure,
 [data-primary-area="pa-campus-news"] figure,
 [data-primary-area="pa-announcements"] figure,
